2009-11-11  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* configure.in: Call ACX_LARGEFILE.  Stop calling AC_PLUGINS,
	AC_SYS_LARGEFILE and checking the Solaris largefile exception.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2009-11-09  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* bucomm.c (get_file_size): Update comment for the error return value.

2009-11-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* readelf.c (slurp_hppa_unwind_table): Don't relocate address twice.

2009-11-05  Kai Tietz  <kai.tietz@onevision.com>

	* dllwrap.c (is_leading_underscore): New variable.
	(cpu_type): New enum type.
	(which_cpu): New variable.
	(usage): Add new options --no-leading-underscore
	and --leading-underscore.
	(long_options): Likewise.
	(OPTION_NO_LEADING_UNDERSCORE): New define.
	(OPTION_LEADING_UNDERSCORE): Likewise.
	(main): Initialize which_host, pass new options
	to dlltool, do underscoring dependent on
	is_leading_underscore, and do '@12' decoration
	only for x86.

2009-11-02  Paul Brook  <paul@codesourcery.com>

	* readelf.c (arm_attr_tag_VFP_arch): Add VFPv4 and VFPv4-D16.

2009-10-28  Kai Tietz <kai.tietz@onevision.com>

	* dlltool.c (leading_underscore): New local variable.
	(asm_prefix): Interpret leading_underscore.
	(xlate): Likewise.
	(add_excludes): Use leading_underscore for making
	symbol name.
	(gen_exp_file): Use leading_underscore for internal
	_imp_ symbols.
	(usage): Add display of --no-leading-underscore and
	--leading-underscore option.
	(OPTION_NO_LEADING_UNDERSCORE): New.
	(OPTION_LEADING_UNDERSCORE): New.
	(long_options): Add --no-leading-underscore and
	--leading-underscore option.
	(main): Handle new options.
	* doc/binutils.text: Add documentation of the options
	--no-leading-underscore and --leading-underscore.

2009-10-23  Kai Tietz  <kai.tietz@onevision.com>

	* deflex.l: Allow '<' and '>' in ID names.

	* defparse.y (EQUAL): New token constant.
	(opt_import_name): New rule for emptry or '==' ID.